@@ -23,6 +23,7 @@ following names for their contribution to the product.
 * MinuteElectron
 * Mohamed Magdy
 * Niklas Laxström
+* Platonides
 * Purodha Blissenbach
 * Raimond Spekking
 * Roan Kattouw
